// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Divider component matches snapshot with additional props 1`] = `
<body>
  .c0 {
  height: 1px;
  margin-bottom: 100px;
  margin-top: 20px;
  width: 100%;
}

<div>
    <div
      class="c0"
    />
  </div>
</body>
`;

exports[`Divider component matches snapshot with only required props 1`] = `
.c0 {
  height: 1px;
  margin-bottom: 8px;
  margin-top: 8px;
  width: 100%;
}

<body>
  <div>
    <div
      class="c0"
    />
  </div>
</body>
`;
